<resources>
    <string name="app_name">EasyDictionary</string>
    <string name="your_translates">Your translates:</string>
    <string name="enter_a_text_and_select_the_language_to_translate">Enter a text and select the language to translate:</string>
    <string name="enter_a_text">enter a text</string>
    <string name="en">en</string>
    <string name="ru">ru</string>
    <string name="translate">Translate</string>
    <string name="are_you_sure_you_want_to_delete_translate">Are you sure you want to delete translate?</string>
    <string name="delete">Delete</string>
    <string name="add_button">add_button</string>
</resources>